<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.FirstConnectionActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Setting_First_Connection"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/first_connection_info"
        android:textColor="@color/text_color_w"

        android:textSize="14sp"

        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/first_step"
        android:textColor="@color/text_color_w"

        android:textSize="14sp"

        android:textStyle="bold" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/ok"
        android:onClick="ForgetConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoToWifi"
        android:background="@drawable/button_background_proxy_list"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/i_all_do"
        android:textColor="@color/text_color_w"
        android:textSize="14sp"

        android:textStyle="bold" />
    <Button
        android:id="@+id/open_wifi_list"
        android:onClick="openWifiListActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_did_everything"
        android:background="@drawable/button_background_set_proxy"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>
</ScrollView>
